[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PyCaliper/uom"]

[tool.hatch.build.targets.sdist]
exclude = [".settings", ".vscode", ".project", ".pydevproject", "README.md"]

[project]
name = "PyCaliper"
version = "1.0.8"
keywords = ["units of measure", "units", "measurement units", "uom", "units of measurement", "measure-conversion"]
authors = [
  { name="Kent Randall", email="point85.llc@gmail.com" },
]
description = "A unit of measure project."
readme = "README_PyPI.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/point85/PyCaliper"
Issues = "https://github.com/point85/PyCaliper/issues"